# instancepedia

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  TROUBLESHOOTING.md  pyproject.toml  requirements.txt  test_region_fetch.py
.github/workflows/: release.yml
docs/: CLI_REFERENCE.md  CONFIGURATION.md  EXAMPLES.md  FEATURES.md  KEYBOARD_SHORTCUTS.md  QUICKSTART.md
docs/.claude/: architecture.md  cli-reference.md  error-handling.md  implementation-details.md  known-issues.md  testing.md
scripts/: publish.sh  release.sh  setup-git-hooks.sh
scripts/completions/: _instancepedia  instancepedia.bash
src/: app.py  cache.py  debug.py  exceptions.py  logging_config.py  main.py
src/cli/: commands.py  output.py  parser.py
src/cli/commands/: __init__.py  base.py  cache_commands.py  instance_commands.py  preset_commands.py  pricing_commands.py
src/config/: settings.py
src/models/: free_tier.py  instance_type.py  region.py  region_mapping.py
src/services/: async_aws_client.py  async_pricing_service.py  aws_client.py  ebs_recommendation_service.py  filter_preset_service.py  filter_service.py  instance_metadata_service.py  instance_service.py  optimization_service.py  pricing_service.py
src/ui/: filter_modal.py  instance_comparison.py  instance_detail.py  instance_list.py  optimization_modal.py  pricing_history_modal.py  region_comparison_modal.py  region_selector.py  region_selector_modal.py  save_preset_modal.py  sort_options.py
src/validation/: __init__.py  api_validators.py
tests/: __init__.py  conftest.py  test_api_validators.py  test_async_aws_client.py  test_async_client_cleanup.py  test_async_pricing_service.py  test_aws_client.py  test_cache.py  test_cli_commands.py  test_cli_optimize.py  test_cli_output_formatters.py  test_cli_parser.py  test_config_settings.py  test_filter_presets.py  test_filter_service.py  test_instance_service.py  test_logging_config.py  test_main.py  test_optimization_modal.py  test_optimization_service.py  test_output_formatters.py  test_pricing_history_modal.py  test_pricing_info.py  test_pricing_service.py  test_region.py  test_region_comparison_modal.py  test_region_mapping.py  test_region_selector_modal.py  test_save_preset_modal.py  test_textual_app_exit.py  test_tui_app.py  test_tui_filter_modal.py  test_tui_instance_comparison.py  test_tui_instance_detail.py  test_tui_instance_list.py  test_tui_region_selector.py
